z-index correction for fixed table headers

--- a/src/renderer/assets/css/helpers/table.scss
+++ b/src/renderer/assets/css/helpers/table.scss
@@ -67,7 +67,7 @@ table.has-separated-tbodies {
 
     position: sticky;
     top: 0;
-    z-index: 4;
+    z-index: 3;
   }
 }
 
@@ -88,7 +88,7 @@ table.has-separated-tbodies {
 
     position: sticky;
     bottom: 0;
-    z-index: 4;
+    z-index: 3;
   }
 }
 
